align fix

--- a/src/Home.css
+++ b/src/Home.css
@@ -62,7 +62,7 @@ nav ul li a {
 }
 
 main {
-  padding: 40px 100px;
+  padding: 40px 140px;
 }
 
 header,
@@ -287,6 +287,8 @@ footer ul li {
   font-size: 30px;
 } */
 
+
+
 @media only screen and (max-width: 768px) {
   .container {
     max-width: 768px;
@@ -297,11 +299,11 @@ footer ul li {
   }
 
   nav {
-    display: flex;
-    justify-content: left;
-    padding: 10px;
+  display: flex;
+  justify-content: left;
+  padding: 10px;
   }
-
+  
   nav ul li {
     display: inline;
   }
@@ -319,7 +321,7 @@ footer ul li {
   }
 
   main {
-    padding: 40px 100px;
+    padding: 20px;
   }
 
   .rent-meta {
@@ -330,7 +332,7 @@ footer ul li {
   header,
   .logo,
   nav {
-    padding: 40px;
+    padding: 20px;
   }
 
   header h1 {
@@ -373,7 +375,7 @@ footer ul li {
   }
 
   .nft-img {
-    max-width: 300px;
+   max-width: 300px;
   }
 
   .wallets {
@@ -429,12 +431,14 @@ footer ul li {
   }
 
   main {
-    padding: 20px 60px;
+    padding: 20px;
+
   }
+
   header,
   .logo,
   nav {
-    padding: 40px 80px;
+    padding: 20px;
   }
 
   header h1 {
